--- a/sqlapp/appsettings.json
+++ b/sqlapp/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SQLConnection": "Server=tcp:appserver1234562.database.windows.net,1433;Initial Catalog=appdb;Persist Security Info=False; User Id=reveszt;Password=Szalm@kalap2/1;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  }
 }
